# whitvm

./: .gitignore  AGENTS.md  IMPROVEMENTS.md  QUICK_START.md  README.md  REFERENCE.md  benchmark_silent.py  pyproject.toml  test_optimizations.py
docs/: ADVANCED.md  CHANGELOG.md  DOCUMENTATION.md  TUTORIAL.md  isa.md
examples/: adventure.whitvm  aweosme_7_bottles.min.whitvm  aweosme_7_bottles.whitvm  aweosme_constant.min.whitvm  aweosme_constant.whitvm  aweosme_function.min.whitvm  aweosme_function.whitvm  error.whitvm  example_programs.min.whitvm  example_programs.whitvm  quiz_game.whitvm  truth_machine.min.whitvm  truth_machine.whitvm  word_counter.whitvm
games/dungeon_crawler/: __init__.py  game.whitvm  play.py
scripts/: benchmark_silent.py
src/whitvm/: __init__.py  cli.py  interpreter.py  loader.py  minifier.py  minifier_core.py  profiler.py
src/whitvm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  test_aweosme.py  test_interpreter.py  test_loader.py  test_madlibs.py  test_minifier.py  test_optimizations.py  test_truth_machine.py
